# Homework_Engine_Platform

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  HOME.md  OBSIDIAN_SETUP.md  QWEN.md  README.md  mcp-config.json  mcp-memory-config.json  mcp-shared-memory.json
.obsidian/: app.json  graph.json  (+1 more)
Nets-pipeline-development/: README.md  _split_pilot.py  biology_sec02_only.yaml  phase-graph.yaml  pilot_manifest.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
Nets-pipeline-development/Docs/: File paths.txt  Pipeline doc summary.txt  TODO Lists.txt  nets-pipeline-architecture.html  nets-pipeline-architecture.md
Nets-pipeline-development/Docs/homework_examples/: tenglama_va_uning_ildizi.md  tenglama_va_uning_ildizi_framework_notes.md
Nets-pipeline-development/frameworks/games/: 02_Spaced_Flashcards.md  03_Tile_Match.md  09_Why_Chain.md  17_Reaction_Chain.md
Nets-pipeline-development/frameworks/schemas/: lesson.json  phase_2.json  phase_4.json  phase_7.json
Nets-pipeline-development/frameworks/subjects/: biology.md  geometriya_advanced.md  matematika.md  rus_tili.md
Nets-pipeline-development/frameworks/system/: extraction.md  phase_worker_base.md  validator.md
Nets-pipeline-development/frameworks/unified/: phase_1.md  phase_4.md  phase_7.md
Nets-pipeline-development/migrations/: 001_init.sql  002_validation.sql
Nets-pipeline-development/src/nets_pipeline/: __init__.py  balance.py  batch.py  cli.py  config.py  dashboard.py  db.py  kimi_client.py  logging_setup.py  pdf_reader.py  phase_graph.py  prompt.py  runner.py  scheduler.py  seed.py  session.py  storage.py  validator.py
Nets-pipeline-development/src/nets_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Nets-pipeline-development/src/nets_validator/: __init__.py  client.py  review.py  rubric.py  sweep.py
Nets-pipeline-development/storage/homeworks/: biology_G5_uz_sec01.md
(+1338 files in other folders)
